Source-neutral carrier + anchor provenance (objectview pointer bump)
Provenance is now a property carried by a swappable `anchor` field, not
by a base class, and identity is generic and stable.

- Descriptors (quiz.source): SourceViewable + WikidataViewable /
  WikidataStatementViewable (a sibling, not a subclass — a statement is
  not a QID-entity) / ManualViewable. Anchorable is the set/swap contract.
- Carriers: WikidataDynamicObject is source-neutral (identifier/name +
  @Provenance anchor); ManualEntity gives hand-written domains the uniform
  anchor; generated classes extend the neutral GeneratedEntity. No carrier
  extends a descriptor or another carrier.
- Identity: getIdentifier() is the one key used by the store, transforms,
  copy and dedup; qid() is the honest real-QID (blank unless QID-shaped),
  used only where a real QID is wanted (guarded by matches). Re-anchoring
  swaps the anchor and never re-keys, so hashCode stays stable.
- Store is generic: keys by getIdentifier(); the DTO identity field is
  `id`, not `qid`. Anchor persistence is deferred (reconstructs on load).
- objectview bumped to d156dd3 (Source class removed; @Provenance generic).

Regeneration (RuntimeJavaCompiler) is not yet compile-tested against
GeneratedEntity — validate by regenerating a domain.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>